examples/errors/invalid_return1.spl
foo(a) {
    if (a) { return 137; } // Returns something
    return; // Does not return anything!
}

main() {return;}